--- a/test_2/index.html
+++ b/test_2/index.html
@@ -23,6 +23,9 @@
         </div>
       </div>
     </header>
+    <!-- header end -->
+
+    <!-- landing page start -->
     <section class="landingPageContainer pad-20">
       <section class="innerContainer">
         <p>Research Professional Platform</p>
@@ -35,6 +38,59 @@
         </p>
       </section>
     </section>
-    <!-- header end -->
+    <!-- landing page end -->
+
+    <!-- slide articles start -->
+    <section class="slideArticles">
+      <section class="innerContainer">
+        <div class="pad-x-20">
+          <p>ACME <span>Insight</span></p>
+          <p>How are factors being used around the world?</p>
+        </div>
+        <div class="articleCardsContainer mar-t-20">
+          <article class="articleCard pad-20 active">
+            <div class="articleImgContainer">
+              <img src="./img/card-image-1.jpg" alt="card image 1" />
+            </div>
+            <h4>Global Factor Investing Study</h4>
+          </article>
+
+          <article class="articleCard pad-20">
+            <div class="articleImgContainer">
+              <img src="./img/card-image-2.jpg" alt="card image 1" />
+            </div>
+            <h4>Global Factor Investing Study</h4>
+          </article>
+
+          <article class="articleCard pad-20">
+            <div class="articleImgContainer">
+              <img src="./img/card-image-3.jpg" alt="card image 1" />
+            </div>
+            <h4>Global Factor Investing Study</h4>
+          </article>
+        </div>
+        <div class="articleBulletsContainer mar-t-20">
+          <span class="active"></span>
+          <span></span>
+          <span></span>
+        </div>
+      </section>
+    </section>
+    <!-- slide articles end -->
+
+    <!-- who we are start -->
+    <section class="whoWeAre">
+      <section class="innerContainer">
+        <h4>Our Commitment to Professionals</h4>
+        <p>
+          We help our partners deliver industry leading results with a
+          commitment to excellence, thought-provoking insights and experienced
+          distribution. We are laser focused on our shared goal – helping
+          clients achieve their objectives. 
+        </p>
+        <a href="#" class="outlineButtonBase transitionAll">Contact Us</a>
+      </section>
+    </section>
+    <!-- who we are end -->
   </body>
 </html>
